gs: Add values to TxSettings.Scheduled
