# pkg/ttnpb/gatewayserver.pb.paths.fm.go
@@ -104,9 +104,10 @@ var GatewayDownFieldPathsNested = []string{
 	"downlink_message.settings.scheduled.frequency",
 	"downlink_message.settings.scheduled.gateway_channel_index",
 	"downlink_message.settings.scheduled.invert_polarization",
-	"downlink_message.settings.scheduled.scheduled",
-	"downlink_message.settings.scheduled.scheduled.class",
-	"downlink_message.settings.scheduled.scheduled.rx_window",
+	"downlink_message.settings.scheduled.request_info",
+	"downlink_message.settings.scheduled.request_info.antenna_index",
+	"downlink_message.settings.scheduled.request_info.class",
+	"downlink_message.settings.scheduled.request_info.rx_window",
 	"downlink_message.settings.scheduled.time",
 	"downlink_message.settings.scheduled.timestamp",
 	"downlink_message.settings.scheduled.tx_power",
